[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netrepl"
version = "0.0.2"
authors = [
  { name="Doug Wilkinson", email="juggler31415@gmail.com" },
]
description = "network based repl tool for micropython"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/DougWilkinson/netrepl"
Issues = "https://github.com/DougWilkinson/netrepl/issues"

